# QueueManagement

./: LICENSE  README.md
queue_system/: CMakeLists.txt  main.cpp  queue_manager.cpp  queue_manager.h
queue_system/protocol/: CMakeLists.txt  base_message.cpp  base_message.h  constant.h  decoder.cpp  decoder.h  message.cpp  message.h
queue_system/server/: CMakeLists.txt  poll.cpp  poll.h  server.cpp  server.h  session.cpp  session.h  tcp_session.cpp  tcp_session.h
queue_system/shared/: common.cpp  common.h  data.h  session_observer.h
queue_system/storage/: CMakeLists.txt  data.h  queue_manager.cpp  queue_manager.h  queue_type.cpp  storage.cpp  storage.h  storage_type.cpp  storage_type.h
